--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,11 @@
     <div class="navbar">
       <div class="menu">
         <a href="/">Home</a>
-        <a href="/bible/">Bible</a>
+        <a href="/bible/view/">Bible</a>
+        <a href="/bible/upload/">Upload</a>
         <a href="/about/">About</a>
       </div>
-    </div>
+     </div>
 
     {% block content %} {% endblock %}
   </body>
