correction dropdown for bibleview

--- a/bibleview/templates/bibleview/bible_list.html
+++ b/bibleview/templates/bibleview/bible_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_head %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/bible.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/bible_list.css' %}">
 {% endblock %}
 
 {% block content %}
