--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,9 @@
         <a href="/">Home</a>
 
         <div class="dropdown">
-          <a href="{% url 'bibleview:bible_list' book='Genesis' chapter=1 %}">Bible</a>
+          <a href="#">Bible</a>
           <div class="dropdown-content">
+            <a href="{% url 'bibleview:bible_list' book='Genesis' chapter=1 %}">BibleView</a>
             <a href="/bible/upload/">Upload</a>
           </div>
         </div>
