--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Hello codehub</title>
-    <link rel="stylesheet" href="{% static 'css/main.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    {% block extra_head %}{% endblock %}
   </head>
   <body>
     <div class="navbar">
