implement async upload w/ Celery

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
           <div class="dropdown-content">
             <a href="{% url 'bibleview:bible_list' book='Genesis' chapter=1 %}">BibleView</a>
             <a href="/bible/upload/">Upload</a>
+            <a href="/bible/upload-async/">Async-Upload</a>
           </div>
         </div>
 
