1st  implementation for YouTube api

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,13 @@
           </div>
         </div>
 
+        <div class="dropdown">
+          <a href="#">YouTube</a>
+          <div class="dropdown-content">
+            <a href="/YouTube/search/">API Test</a>
+          </div>
+        </div>
+
         <a href="/about/">About</a>
       </div>
     </div>
