--- a/bibleview/templates/bibleview/error.html
+++ b/bibleview/templates/bibleview/error.html
@@ -4,7 +4,7 @@
 <div class="error-container">
     <h2>오류 발생</h2>
     <p>{{ error }}</p>
-    <a href="{% url 'bibleview:bible_list' book='Genesis' chapter=1 %}" class="home-button">처음으로 돌아가기</a>
+    <a href="{% url 'bibleview:bible_list' book='창세기' chapter=1 %}" class="home-button">처음으로 돌아가기</a>
 </div>
 
 <style>
