--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
         <div class="dropdown">
           <a href="#">Kakao</a>
           <div class="dropdown-content">
-            <a href="/kakao/search/book/">API Test</a>
+            <a href="/kakao/search/book/">book query</a>
           </div>
         </div>
 
